# aeruginous-io

./: .clippy.toml  CHANGELOG.ron  CITATION.cff  Cargo.toml  README.md
.github/: aeruginous-io.cff
changelog.d/: 20240110_114740_GitHub_Actions_ci-setup.ron  20240110_122358_Kevin_Matthes_ci-comment-changes.ron  20240110_200307_GitHub_Actions_rust-setup.ron  20240112_162420_GitHub_Actions_ronlog-init.ron  20240112_163315_GitHub_Actions_release-workflow-init.ron  20240113_132329_GitHub_Actions_21.ron  20240113_132920_GitHub_Actions_24.ron  20240113_133747_GitHub_Actions_readme-link-list-dependencies.ron  20240113_151936_GitHub_Actions_reading-from-stdin.ron  20240113_155647_GitHub_Actions_crates-io-upload.ron  20240114_145605_GitHub_Actions_mutants-on-pr.ron  20240114_151513_GitHub_Actions_38.ron  20240114_202912_GitHub_Actions_option-reader.ron  20240118_162120_GitHub_Actions_obsolete-clippy-mercy.ron  20240125_122001_GitHub_Actions_truncate-path-buf-like.ron  20240125_132721_GitHub_Actions_io-example-truncation.ron  20240128_160529_GitHub_Actions_writer.ron  20240128_161808_GitHub_Actions_cff-cargo-mutants.ron  20240128_190857_GitHub_Actions_option-truncation.ron  20240202_163408_GitHub_Actions_vector-reader.ron  20240209_194224_GitHub_Actions_call-renovate-linter-directly.ron  20240211_150158_GitHub_Actions_path-buf-like-appendix.ron  20240216_230445_GitHub_Actions_124.ron  20240216_231421_GitHub_Actions_123.ron  20240216_233549_GitHub_Actions_122.ron  20240218_153750_GitHub_Actions_133.ron  20240302_203707_GitHub_Actions_151.ron  20240302_205334_GitHub_Actions_151.ron  (+2 more)
(+15 files in other folders)
