[dependencies]
sysexits = "0.7.11"

[package]
authors = ["Kevin Matthes <aeruginous.rs@gmail.com>"]
categories = ["algorithms", "filesystem"]
description = "A set of input / output utilities for the Aeruginous Open Source Development Toolbox."
edition = "2021"
homepage = "https://github.com/kevinmatthes/aeruginous-io"
include = ["/src"]
keywords = ["aeruginous", "io"]
license = "GPL-3.0"
name = "aeruginous-io"
readme = "README.md"
repository = "https://github.com/kevinmatthes/aeruginous-io"
rust-version = "1.75.0"
version = "0.5.0"
